--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-2": "^6.13.0",
     "chai": "^3.5.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "^1.0.0",
     "eslint": "^3.2.2",
     "eslint-config-standard": "^6.0.0-beta.2",
     "eslint-friendly-formatter": "^2.0.6",
@@ -59,20 +59,22 @@
     "eslint-plugin-standard": "^2.0.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.8.4",
-    "html-webpack-plugin": "^2.28.0",
-    "karma": "^1.1.2",
-    "karma-mocha": "^1.1.1",
-    "karma-phantomjs-launcher": "^1.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "karma": "^3.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-sinon-chai": "^1.3.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^2.0.13",
-    "mocha": "^3.5.3",
+    "karma-webpack": "^3.0.5",
+    "lodash": "^4.17.5",
+    "mocha": "^5.2.0",
     "phantomjs-prebuilt": "^2.1.16",
     "rimraf": "^2.6.2",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.14.0",
     "stylus": "^0.54.5",
+    "debug": "^2.6.9",
     "stylus-loader": "^2.4.0",
     "sw-precache-webpack-plugin": "^0.9.1",
     "vue-loader": "^10.0.0",
